# betacode-parser

./: .gitignore  LICENSE  README.md  coptic_parser.py  greek_lists.py  greek_parser.py  hebrew_lists.py  hebrew_parser.py  lists.py  pyproject.toml
.github/workflows/: python-publish.yml
betacode_parser/: coptic_lists.py  coptic_parser.py  greek_lists.py  greek_parser.py  hebrew_lists.py  hebrew_parser.py  parser.py
src/betacode_parser/: __init__.py  coptic_lists.py  coptic_parser.py  greek_lists.py  greek_parser.py  hebrew_parser.py  parser.py
tests/: main.py  main_test.py
