[project]
name = "betacode-parser"
version = "1.0.0"
authors = [
  { name="Ved Rane" },
]
description = "A fully implemented Beta Code parser."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/vedrane/betacode-parser"
Issues = "https://github.com/vedrane/betacode-parser/issues"